# cmake-trials

./: compile
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/ashlesh/cmakendncxxtest1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/ndn-cxx/: CMakeLists.txt
app/src/main/cpp/ndn-cxx/src/: ndn-cxx-config.hpp  version.hpp
app/src/main/java/com/example/ashlesh/cmakendncxxtest1/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ashlesh/cmakendncxxtest1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
